Refactor Jenkinsfile to simplify Java configuration